...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                                <state key="normal" title="GET STARTED">
                                    <color key="titleColor" red="0.56862745100000001" green="0.40000000000000002" blue="0.88235294119999996" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                                <state key="normal" title="SIGN IN">
                                    <color key="titleColor" red="0.56862745100000001" green="0.40000000000000002" blue="0.88235294119999996" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
                                </constraints>
                                <fontDescription key="fontDescription" name="OpenSans-SemiBold" family="Open Sans" pointSize="17"/>
                                <state key="normal" title="SIGN UP">
                                    <color key="titleColor" red="0.56862745100000001" green="0.40000000000000002" blue="0.88235294119999996" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
                                        </constraints>
                                    </imageView>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dSf-B4-01S">
                                        <rect key="frame" x="35" y="0.0" width="265" height="40"/>
                                        <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                        </constraints>
                                    </imageView>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5lL-iv-E7k">
                                        <rect key="frame" x="35" y="0.0" width="265" height="40"/>
                                        <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                        </constraints>
                                    </imageView>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Confirm Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Agi-yT-WcL">
                                        <rect key="frame" x="35" y="0.0" width="265" height="40"/>
                                        <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                </constraints>
                            </view>
                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please enter a valid email address" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jbm-7w-Trw" userLabel=
                                <rect key="frame" x="77.5" y="317" width="221" height="19.5"/>
                                <accessibility key="accessibilityConfiguration" identifier="errorLabel"/>
...
                                        </constraints>
                                    </imageView>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uit-I6-QtM">
                                        <rect key="frame" x="35" y="0.0" width="265" height="40"/>
                                        <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
