...
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2J9-JB-GZx">
                                                    <rect key="frame" x="324" y="0.0" width="35" height="35"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="35" id="bHZ-Jm-kAI"/>
                                                        <constraint firstAttribute="width" constant="35" id="hcx-EU-XGT"/>
                                                    </constraints>
                                                    <state key="normal" image="settings"/>
                                                    <connections>
                                                        <segue destination="TxQ-00-8n3" kind="show" id="fTb-fW-LXN"/>
                                                    </connections>
                                                </button>
                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="snx-sk-Uf5" customClass="RoundedView" customModule="GetRecd" customModuleProvider="target">
                                                    <rect key="frame" x="137" y="200" width="100" height="100"/>
...
            <point key="canvasLocation" x="2545" y="476"/>
        </scene>
        <!--Profile-->
        <scene sceneID="d0g-uw-vFt">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="T6R-MR-6hG" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Profile" image="tabProfile" id="SZl-s5-EUM"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="BWe-If-hop">
                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <textAttributes key="titleTextAttributes">
                            <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="16"/>
...
